[package]
name = "lean-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.30.2"
image = "0.23.14"
serde_json = "1.0.69"
tokio = { version="1.13.0", features = ["full"] }
reqwest = "0.11.6"
lazy_static = "1.4.0"
anyhow = "1.0.45"
bytes = "1.1.0"
glam = "0.20.0"
lerp = "0.4.0"
nalgebra-glm = "0.15.0"
nalgebra = "0.29.0"
